# learn-amm

./: .gitignore  README.md  package.json
.github/workflows/: test.yml
react/: package.json  tsconfig.json  webpack.config.js
react/config/: webpack.config.js
react/src/: App.tsx  bootstrap.js  index.html
src/: App.test.tsx
wasm/: Cargo.toml  LICENSE_MIT  package.json
wasm/src/: lib.rs
wasm/src/amm/: constant_product.rs  mod.rs
